<resources>
    <string name="app_name">LEADERBOARD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="learners_tab">Learning Leaders</string>
    <string name="skills_tab">Skills IQ Learners</string>
    <string name="submit">Submit</string>
    <string name="leader_image">LeaderImage</string>
    <string name="logo">Logo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GITHUB(link)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="yes">Yes</string>
    <string name="cancel_button">cancel button</string>
    <string name="okay_image_button">Okay Image Button</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="unsuccessful_submission">Unsuccessful Submission</string>
    <string name="submission_not_successful">Submission not Successful</string>
    <string name="project_submission">Project Submission</string>
</resources>