<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@android:style/Theme.Dialog"
    tools:context=".dialogFragments.SuccessDialogFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/confirmTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimary"
        android:text="@string/are_you_sure"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:padding="2dp"
        android:layout_below="@id/confirmTxt"
        android:background="@android:color/holo_orange_dark"
        android:layout_centerHorizontal="true">
        <Button
            android:id="@+id/yesBtn"
            android:layout_width="195dp"
            android:layout_height="50dp"
            android:text="@string/yes"
            android:background="@android:color/white"
            android:textColor="@android:color/holo_orange_dark" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/cancelBtn"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/criss_cross"
        android:background="#ffffff"
        android:padding="12dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:scaleType="fitXY"
        android:contentDescription="@string/cancel_button"/>

</RelativeLayout>